--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -4,9 +4,9 @@
 {% endblock %}
 {% block page %}
 <div class='tabbable'>
-    <ul class='nav nav-tabs'>
-        <li data-bind='css: { active: firstVisit }'><a href='#instructions' data-toggle='tab'>Instructions</a></li>
-        <li data-bind='css: { active: ! firstVisit }'><a href='#dashboard' data-toggle='tab'>Dashboard</a></li>
+    <ul class='nav nav-tabs' id='lfp-navtabs'>
+        <li data-bind='css: { active: firstVisit() }'><a href='#instructions' data-toggle='tab'>Instructions</a></li>
+        <li data-bind='css: { active: ! firstVisit() }'><a href='#dashboard' data-toggle='tab'>Dashboard</a></li>
         <li><a href='#group-wall' data-toggle='tab'>Group Wall</a></li>
         <li><a href='#all-activities' data-toggle='tab'>All activities</a></li>
         <li><a href='#faq' data-toggle='tab'>FAQ</a></li>
@@ -35,8 +35,9 @@
             </p>
             <h3>How to participate</h3>
             <p>
-            To begin participating, click on the "All activities" tab, and select an activity you'd like to perform.
-            Available activities will be marked with an exclamation point: <i class='icon-exclamation-sign'></i>
+            To begin participating, click on the <a href='#all-activities' data-bind='click: activateAllActivitiesTab'>"All activities" tab</a>, and select an activity you'd like to perform.
+            Available activities will be marked with an exclamation point: <i class='icon-exclamation-sign'></i> and
+            <span class='alert-success'>highlighted in green</span>.
             </p>
         </div>
         <div class='tab-pane' id='all-activities'>
@@ -46,8 +47,8 @@
             <span data-bind='text:pointsToNextLevel' class='badge badge-info'></span>.
             </p>
             <p>
-            Currently available activities are marked with a <i class='icon-exclamation-sign'></i>.  You can click on
-            any activity's name to learn more information about it.
+            Currently available activities are marked with a <i class='icon-exclamation-sign'></i> and <span
+                class='alert-success'>highlighted in green</span>.  You can click on any activity to learn more about it.
             </p>
             {% comment %} FIXME: rewrite this to use KO instead of django templating if possible {% endcomment %}
             <div data-bind='foreach: activitiesByLevel'>
@@ -59,12 +60,21 @@
             </div>
         </div>
         <div class='tab-pane' id='dashboard'>
+            <div data-bind='if: ! firstVisit()'>
+                Welcome back to the Lighter Footprints Experiment, {{request.user.participant.full_name}}.  Your group
+                score and summary is shown below.
+            </div>
             <h3>Dashboard Summary</h3>
+            <p>
             Your group is currently <span class='badge badge-important'>level <span data-bind='text:groupLevel'></span></span>
             and has accumulated <span class='badge badge-important'><span data-bind='text:averagePoints'></span> average points</span>.
             In order to advance in level and unlock more activities the <strong>average number of points contributed by each member of your
-            group</strong> must be equal to or greater than <span data-bind='text: pointsToNextLevel' class='badge badge-info'></span>.  In order to reach this target <span class='text-warning'>you and a
-            majority of the members of your group</span> must perform high point activities when they are available.
+                group</strong> must be greater than or equal to <span data-bind='text: pointsToNextLevel' class='badge badge-info'></span>.  
+            </p>
+            <p>
+            In order to reach this target <span class='text-warning'>you and a
+                majority of the members of your group</span> must perform high point activities when they are available.
+            </p>
             <table class='table table-bordered table-striped'>
                 <caption>Group Score Summary</caption>
                 <thead><tr><th>Group</th><th>Level</th><th>Total points</th><th>Size of group</th><th>Group average points</th><th>Group average points needed to reach the next level</th></tr></thead>
@@ -88,7 +98,8 @@
             <div data-bind='ifnot: hasAvailableActivities()'>
                 <div class='alert alert-error'>
                     <i class='icon-info-sign'></i>
-                    There are no available activities at this time.  Please try again later.
+                    There are no available activities at this time.  Please try again later.  To see when activities
+                    will be available, click on the <a href='#all-activities' data-bind='click: activateAllActivitiesTab'>"All activities" tab</a>.
                 </div>
             </div>
 
@@ -209,13 +220,14 @@ $(function() {
     function LighterFootprintsModel(modelJson) {
         var self = this;
         var model = ko.mapping.fromJS(modelJson);
-        console.debug("model activities by level");
-        console.debug(model.activitiesByLevel());
         // FIXME: hacky, figure out if there is a way to pass the observable in directly from the model object we get in
         // performActivity
         model.lastPerformedActivity = ko.observable();
         model.lastPerformedActivityPoints = ko.observable();
         model.errorMessage = ko.observable();
+        model.activateAllActivitiesTab = function() {
+            $('#lfp-navtabs a[href="#all-activities"]').tab('show');
+        }
         model.hasChatMessages = function() {
             return model.chatMessages().length > 0;
         }
@@ -228,10 +240,7 @@ $(function() {
             return false;
         }
         model.availableActivities = ko.computed(function() {
-            console.log(model.activities());
-            var availables = ko.utils.arrayFilter(model.activities(), function(activity) { return activity.available_now() });
-            console.log(availables);
-            return availables;
+            return ko.utils.arrayFilter(model.activities(), function(activity) { return activity.available_now() });
         });
         model.hasAvailableActivities = ko.computed(function() {
             return model.availableActivities().length > 0;
@@ -246,7 +255,6 @@ $(function() {
             var activityId = activityModel.pk();
             var formData = $('#activityform' + activityId).serialize();
             $.post('/lighterprints/api/do-activity', formData, function(data) {
-                console.log(data);
                 if (data.success) {
                     ko.mapping.fromJSON(data.viewModel, model);
                     console.debug("successfully performed activity");
@@ -265,6 +273,9 @@ $(function() {
     // set up KO binding, using one master view model
     var viewModelData = $.parseJSON("{{ view_model_json|escapejs }}");
     var viewModel = new LighterFootprintsModel(viewModelData);
+    if (! viewModel.firstVisit()) {
+        $('#lfp-navtabs a[href="#dashboard"]').tab('show');
+    }
     ko.applyBindings(viewModel);
 });
 </script>
