--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -47,9 +47,13 @@
             <span data-bind='text:pointsToNextLevel' class='badge badge-info'></span>.
             </p>
             <p>
+            Some activities are available all day, and others are only available at <strong>certain hours</strong>.
             Currently available activities are marked with a <i class='icon-exclamation-sign'></i> and <span
                 class='alert-success'>highlighted in green</span>.  You can click on any activity to learn more about it.
             </p>
+            <div class='alert alert-info'>
+                <i class='icon-time'></i> The time is now <strong>{% now "P" %}</strong>
+            </div>
             {% comment %} FIXME: rewrite this to use KO instead of django templating if possible {% endcomment %}
             <div data-bind='foreach: activitiesByLevel'>
                 <div class='accordion' data-bind='attr: {id: "accordion-level" + $index()}'>
@@ -70,18 +74,24 @@
             and has accumulated <span class='badge badge-important'><span data-bind='text:averagePoints'></span> average points</span>.
             In order to advance in level and unlock more activities the <strong>average number of points contributed by each member of your
                 group</strong> must be greater than or equal to <span data-bind='text: pointsToNextLevel' class='badge badge-info'></span>.  
+            <div class='alert alert-info'>
+                <i class='icon-warning-sign'></i>Your point totals reset <strong>nightly</strong> so if your group's
+                average number of points doesn't reach or exceed <span data-bind='text: pointsToNextLevel'></span> by
+                midnight, you will have to start over again the next day.
+            </div>
             </p>
             <p>
-            In order to reach this target <span class='text-warning'>you and a
-                majority of the members of your group</span> must perform high point activities when they are available.
+            In order to reach this target <span class='text-warning'>you and a majority of the members of your group</span> must perform high point activities when they are available.
             </p>
+            <hr>
             <table class='table table-bordered table-striped'>
-                <caption>Group Score Summary</caption>
-                <thead><tr><th>Group</th><th>Level</th><th>Total points</th><th>Size of group</th><th>Group average points</th><th>Group average points needed to reach the next level</th></tr></thead>
+                <caption>Today's Group Score Summary <strong>(point totals reset starting from {% now "m/d/Y" %} 12:00 AM)</strong></caption>
+                <thead><tr><th>Group</th><th>Level</th><th>Total points earned by you</th><th>Total group points</th><th>Group size</th><th>Group average points</th><th>Group average points needed to reach the next level</th></tr></thead>
                 <tbody data-bind='foreach: groupData'>
                 <tr>
                     <td data-bind='text: group'></td>
                     <td data-bind='text: groupLevel'></td>
+                    <td data-bind='text: totalParticipantPoints'></td>
                     <td data-bind='text: totalPoints'></td>
                     <td data-bind='text: groupSize'></td>
                     <td data-bind='text: averagePoints'></td>
@@ -286,7 +296,7 @@ $(function() {
         <a class='accordion-toggle' data-toggle='collapse'
             data-bind='attr: {"data-parent": "#" + $parent.parentId, href: "#activity" + $parent.parentId + pk()}'><i class='icon-chevron-right'></i>
             <span data-bind='text: display_name'></span>
-            <span class='pull-right text-info'><span data-bind='if: available_now'><i class='icon-exclamation-sign'></i></span><span data-bind='text: time_slots'></span></span>
+        <span class='pull-right text-info'><span data-bind='if: available_now'><i class='icon-exclamation-sign'></i></span><i class='icon-time'></i><strong><span data-bind='text: time_slots'></span></strong></span>
         </a>
     </div>
     <div data-bind='css: { in: available_now() }, attr: {id: "activity" + $parent.parentId + pk()}' class='accordion-body collapse'>
@@ -294,12 +304,12 @@ $(function() {
             <table class='table table-condensed table-bordered table-hover'>
                 <thead><tr><th>Summary</th><th>Availability</th><th>Points</th></tr></thead>
                 <tbody>
-                    <tr><td data-bind='text: summary'></td><td><span data-bind='text: time_slots' class='text-info'></span></td><td><span data-bind='text: points' class='badge badge-success'></span></td></tr>
+                    <tr><td data-bind='text: summary'></td><td><i class='icon-time'></i><strong><span data-bind='text: time_slots' class='text-info'></span></strong></td><td><span data-bind='text: points' class='badge badge-success'></span></td></tr>
             </table>
             <p data-bind='text: description'></p>
             <p>For more info, please visit <a data-bind='text: url, attr: { href: url }' target="_blank"></a></p>
             <div data-bind='ifnot: available_now'>
-                <div class='alert alert-error'>
+                <div class='alert alert-message'>
                     <i class='icon-warning-sign'></i>This activity is not available right now.  Please check again later.
                 </div>
             </div>
