- updating dependencies - fixing tests - adding Experiment.complete() to flag an experiment as completed, still need to wire it up to the ui

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -72,9 +72,9 @@
 </div>
 <div class='container'>
     <noscript>
-        <div class='alert alert-error'>
-            <p>Please <b>enable JavaScript</b> before using this site.</p>
-            <p>Our experiments are interactive and <b>will not function properly</b> without JavaScript.</p>
+        <div class='alert alert-error alert-block'>
+            <p>Please <b>enable JavaScript</b> before using this site.
+            <p>Experiments may not function properly without JavaScript enabled.</p>
         </div>
     </noscript>
     {% if messages %}
